structure step 3 update

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -97,17 +97,21 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><span class="bold">Understand the differences in the code</span>
+   <li><span class="bold">Understand the differences in the code and HTML structure</span>
     <br />
     <span class="cagov-step-list-content">
-     <p>Review template updates. Do a code comparison in the <a
-       href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">state
-       web template website repo</a> to understand
-      structural and component changes. This helps you understand the work you need to do. Learn how
-      to do
-      a <a
-       href="https://docs.github.com/en/pull-requests/committing-changes-to-your-project/viewing-and-comparing-commits/comparing-commits">code
-       comparison in GitHub</a>.</p>
+      <p>
+        You’ll want to compare your current CSS and JS files to the state template’s files (especially if you have custom styles). This helps you understand the work you need to do. Learn how to do a <a href="https://docs.github.com/en/pull-requests/committing-changes-to-your-project/viewing-and-comparing-commits/comparing-commits">code comparison in GitHub</a>.
+      </p>
+
+<ul>
+  <li><a href="https://template.webstandards.ca.gov/structure.html">Structural elements</a> </li>
+    <li><a href="https://template.webstandards.ca.gov/components.html">Components</a></li>
+      <li><a href="https://template.webstandards.ca.gov/patterns.html">Patterns</a></li>
+
+</ul>
+<p>This may affect your HTML, requiring structural code updates.</p>
+
     </span>
    </li>
 
