--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -105,9 +105,9 @@ permalink: "download-and-setup.html"
       </p>
 
 <ul>
-  <li><a href="https://template.webstandards.ca.gov/structure.html">Structural elements</a> </li>
-    <li><a href="https://template.webstandards.ca.gov/components.html">Components</a></li>
-      <li><a href="https://template.webstandards.ca.gov/patterns.html">Patterns</a></li>
+  <li><a href="./structure.html">Structural elements</a> </li>
+    <li><a href="./components.html">Components</a></li>
+      <li><a href="./patterns.html">Patterns</a></li>
 
 </ul>
 <p>This may affect your HTML, requiring structural code updates.</p>
