Update landing keyword for proper site nav active classes

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -1,6 +1,6 @@
 ---
 title: Download and setup
-landing: Download and setup
+landing: Get started
 layout: page.njk
 permalink: "download-and-setup.html"
 ---
