updated social media icons content #981

--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -10,7 +10,7 @@ permalink: "components/social-media-icons.html"
 
 <nav class="page-navigation"></nav>
 
-<p>The social media icons component lets you share your agency’s social media pages with visitors.</p>
+<p>The social media icons component lets you link to your agency’s social media pages.</p>
 <h2>Sample</h2>
 
 <!--TABS-->
@@ -68,7 +68,10 @@ permalink: "components/social-media-icons.html"
 
 <h2>Usage</h2>
 <h3>When and how to use it </h3>
-<p>Use social media icons in the site footer. These icons should link to your official social media accounts. </p>
+<p>Use social media icons within content (e.g. press release, blog post, etc). These icons should link to your official
+ social media accounts. </p>
+<p>Since these icons promote your social media accounts, make sure the content around them is clear. Use terms like
+ "Follow us."</p>
 <p>The available social media icons include:</p>
 <ul>
  <li>Facebook</li>
@@ -85,6 +88,9 @@ permalink: "components/social-media-icons.html"
 </h3>
 <p>Do not include more than one social media account per platform. Do not link to social media accounts that are not
  updated or monitored regularly.</p>
+
+<p>This component is different from the social media links in the footer. The footer comes with social media options and
+ does not use this component.</p>
 
 
 
