--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -97,22 +97,24 @@ permalink: "components/lists.html"
  steps in a process so that your reader can complete the task.</p>
 <!--TABS-->
 <div class="tab-group responsive">
- <ul id="tabs1" class="nav nav-tabs" role="tablist">
+ <ul id="tabs2" class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
-   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab"><span
+     class="sr-only">Ordered list</span> Example</a>
   </li>
   <li class="nav-item" role="presentation">
-   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab"><span class="sr-only">Ordered
+     list</span> Source code</a>
   </li>
 
  </ul>
 
 
- <div id="tab-content" class="tab-content">
+ <div id="tab-content2" class="tab-content">
   <!--Examples-->
   <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
    <div class="card-header" id="heading-example3">
-    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
+    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content2" aria-expanded="true"
      aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
      Example
     </a>
@@ -132,7 +134,7 @@ permalink: "components/lists.html"
   <!--HTML-->
   <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
    <div class="card-header" id="heading-html3">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content2"
      aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
      Source code
     </a>
