updated buttons page headings #1157

--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -45,16 +45,16 @@ permalink: "components/button.html"
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
     <div class="card-body p-b-md">
-     <p class="lead bold m-b">Primary action buttons</p>
+     <h3 class="h4 m-t-0 m-b-sm">Primary action buttons</h3>
      {% include "../../src/_includes/modules/buttons.html" %}
 
-     <p class="lead bold m-b">Secondary action buttons </p>
+     <h3 class="h4 m-y-sm">Secondary action buttons </h3>
      {% include "../../src/_includes/modules/buttons-outline.html" %}
 
-     <p class="lead bold m-b">Disabled buttons</p>
+     <h3 class="h4 m-y-sm">Disabled buttons</h3>
      {% include "../../src/_includes/modules/buttons-disabled.html" %}
 
-     <p class="lead bold m-b">Button sizes</p>
+     <h3 class="h4 m-y-sm">Button sizes</h3>
      {% include "../../src/_includes/modules/buttons-sizes.html" %}
     </div>
    </div>
@@ -70,18 +70,17 @@ permalink: "components/button.html"
    </div>
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
-     <p class="lead bold m-b">Primary action buttons</p>
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/buttons.html" %}</code></pre>
+     <h3 class="h4 m-t-0 m-b-sm">Primary action buttons</h3>
+     <pre><code>{% include "../../src/_includes/modules/buttons.html" %}</code></pre>
 
-     <p class="lead bold m-b">Secondary action buttons </p>
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/buttons-outline.html" %}</code></pre>
+     <h3 class="h4 m-b-sm">Secondary action buttons </h3>
+     <pre><code>{% include "../../src/_includes/modules/buttons-outline.html" %}</code></pre>
 
-     <p class="lead bold m-b">Disabled buttons</p>
-     <pre
-      style="max-height: 300px;"><code>{% include "../../src/_includes/modules/buttons-disabled.html" %}</code></pre>
+     <h3 class="h4 m-b-sm">Disabled buttons</h3>
+     <pre><code>{% include "../../src/_includes/modules/buttons-disabled.html" %}</code></pre>
 
-     <p class="lead bold m-b">Button sizes</p>
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/buttons-sizes.html" %}</code></pre>
+     <h3 class="h4 m-b-sm">Button sizes</h3>
+     <pre><code>{% include "../../src/_includes/modules/buttons-sizes.html" %}</code></pre>
     </div>
    </div>
 
