Fix typo in California

--- a/pages/about.html
+++ b/pages/about.html
@@ -46,5 +46,5 @@ permalink: "about.html"
   href="https://designsystem.webstandards.ca.gov/">California
   Design
   System</a>. We are excited to iterate on our digital toolset and evolve the state template to a design standard for
- california. We want to improve the digital experience of Californians and improve how we partner with State agencies.
+ California. We want to improve the digital experience of Californians and improve how we partner with State agencies.
 </p>
