Updated download and setup page #840

--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -23,6 +23,10 @@ permalink: "sitemap.html"
      </li>
      <li class="m-t-sm">
       <a href="/download-and-setup.html">Download and setup</a>
+      <ul>
+       <li class="m-t-sm"><a href="/get-started/implementation-roadmap.html">Implementation roadmap</a></li>
+       <li class="m-t-sm"><a href="/get-started/eleventy.html">Eleventy</a></li>
+      </ul>
      </li>
      <li class="m-t-sm">
       <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
