--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -185,7 +185,7 @@ permalink: "visual-design/icons.html"
   let listHtml = "";
   var numberOfResults = 0;
   var inputBox = document.querySelector("#iconSearchForm input");
-  var searchInput = inputBox ? inputBox.value.trim().toLowerCase().replace(/[<>="'`&;]/g, ' ') : "";
+  var searchInput = inputBox ? sanitize(inputBox.value.trim().toLowerCase()) : "";
   const iconsPerPage = 60;
 
   const letterList = [...new Set(iconData.icons.map(x => x.properties.name.charAt(0)))];
@@ -205,11 +205,11 @@ permalink: "visual-design/icons.html"
 
   // loop over icons
   for (const icon of iconsByLetter) {
-   const iconStrings = [...new Set([icon.properties.name, ...icon.icon.tags])].filter(x => x.length);
+   const iconStrings = [...new Set([icon.properties.name, icon.properties.name.replace('-', ' '), ...icon.icon.tags])].filter(x => x.length);
 
    if (!searchInput.length || iconStrings.find(x => x.search(searchInput) > -1)) {
     if (!paginate || (numberOfResults >= (pageNumber * iconsPerPage) && numberOfResults < ((pageNumber + 1) * iconsPerPage))) {
-     const iconName = icon.properties.name.replace(/[<>="'`&;]/g, ''); //html XSS bad character removal
+     const iconName = sanitize(icon.properties.name);
      const firstLetter = iconName.charAt(0);
      if (!paginate && !filterLetter && !searchInput.length && letter !== firstLetter) {
       // show the blue letter heading
@@ -231,6 +231,10 @@ permalink: "visual-design/icons.html"
     }
     numberOfResults++;
    }
+  }
+
+  function sanitize(input) {
+    return input.replace(/[^a-zA-Z0-9\ \-]/g,' ');
   }
 
 
