--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -20,7 +20,7 @@ permalink: "patterns/banner.html"
 
 <p>The banner is the first thing a visitor sees on the homepage of a website. It often spans the full width
  of the screen or the main content area.</p>
-<p>It usually includes a(n):</p>
+<p>It usually includes a(an):</p>
 <ul>
  <li>Title</li>
  <li>Brief description</li>
