Web Accessibility Issues (FTB) #1180 - Issue 5

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -55,7 +55,8 @@ permalink: "visual-design/color.html"
 
   <p>People with low vision should be able to see and use your web products. We recommend choosing primary, secondary,
    and accent colors with accessible color contrast ratios. Use <a
-    href="https://accessibleweb.com/color-contrast-checker/">Accessible WEB</a> to check the accessibility of your color
+    href="https://accessibleweb.com/color-contrast-checker/">Accessible WEB <span class="sr-only">opens in a new window</span>
+  </a> to check the accessibility of your color
    combinations.</p>
 
   <div id="theme-palettes" class="mt-5">
