Update tab from Nunjucks to Eleventy

--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -58,7 +58,7 @@ permalink: "structure/search.html"
      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
+     <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Eleventy include</a>
     </li>
    </ul>
 
