--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -34,7 +34,7 @@ permalink: "components/alert.html"
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
   <li class="nav-item" role="presentation">
-   <a id="tab-njk1" href="#pane-njk1" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
+   <a id="tab-njk1" href="#pane-njk1" class="nav-link" data-bs-toggle="tab" role="tab">Eleventy include</a>
   </li>
  </ul>
 
