--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -52,7 +52,7 @@ permalink: "structure/utility-header.html"
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item" role="presentation">
-     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
+     <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Eleventy include</a>
     </li>
    </ul>
 
