--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -24,7 +24,8 @@ permalink: "components/form-elements.html"
   line-height: 50px;
   letter-spacing: -4px;
   height: 26px;
- }
+  speak: none;
+}
 </style>
 
 
@@ -78,10 +79,10 @@ permalink: "components/form-elements.html"
   </div>
   <div id="collapse-example7" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example7">
    <div class="p-a-sm p-b">
-    <div class="bg-gray-50 p-a">
+    <div class="p-a">
      <div class="row">
       <div class="col-sm-3">
-       <p class="outline-color blue-arrow text-right">Label</p>
+       <p class="color-primary blue-arrow text-right">Label</p>
       </div>
       <div class="col-sm-9">{% include "../../src/_includes/modules/form-label.html" %}</div>
      </div>
@@ -143,22 +144,22 @@ permalink: "components/form-elements.html"
   </div>
   <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
    <div class="p-a-sm">
-    <div class="bg-gray-50 p-a">
+    <div class="p-a">
      <h3 class="h4 m-t-0">Basic</h3>
      <div class="row">
       <div class="col-sm-3">
-       <p class="mt-4 pt-2 outline-color blue-arrow text-right">Text field</p>
+       <p class="mt-4 pt-2 color-primary blue-arrow text-right">Text field</p>
       </div>
       <div class="col-sm-9">{% include "../../src/_includes/modules/form-textfield.html" %}</div>
      </div>
     </div>
 
 
-    <div class="bg-gray-50 p-a m-t-md">
+    <div class="p-a m-t-md">
      <h3 class="h4 m-t-0">Required</h3>
      <div class="row">
       <div class="col-sm-3">
-       <p class="mt-4 pt-2 outline-color blue-arrow text-right">Text field</p>
+       <p class="mt-4 pt-2 color-primary blue-arrow text-right">Text field</p>
       </div>
       <div class="col-sm-9">{% include "../../src/_includes/modules/form-textfield-required.html" %}</div>
      </div>
@@ -228,22 +229,22 @@ permalink: "components/form-elements.html"
    <div class="p-a-sm">
 
 
-    <div class="bg-gray-50 p-a">
+    <div class="p-a">
      <h3 class="h4 m-t-0">Basic</h3>
      <div class="row">
       <div class="col-sm-3">
-       <p class="mt-4 pt-2 outline-color blue-arrow text-right">Text area</p>
+       <p class="mt-4 pt-2 color-primary blue-arrow text-right">Text area</p>
       </div>
       <div class="col-sm-9">{% include "../../src/_includes/modules/form-textarea.html" %}</div>
      </div>
     </div>
 
 
-    <div class="bg-gray-50 p-a m-t-md">
+    <div class="p-a m-t-md">
      <h3 class="h4 m-t-0">Required</h3>
      <div class="row">
       <div class="col-sm-3">
-       <p class="mt-4 pt-2 outline-color blue-arrow text-right">Text area</p>
+       <p class="mt-4 pt-2 color-primary blue-arrow text-right">Text area</p>
       </div>
       <div class="col-sm-9">{% include "../../src/_includes/modules/form-textarea-required.html" %}</div>
      </div>
