Adding noindex support

--- a/pages/contact-us-thankyou.html
+++ b/pages/contact-us-thankyou.html
@@ -2,6 +2,7 @@
 title: Contact us thanks
 layout: one-col.njk
 permalink: "contact-us-thankyou.html"
+noindex: True
 ---
 
 <h1 class="mt-lg-0">Thank you for your response</h1>
