colortheme canonical link

--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -2,7 +2,7 @@
 title: Color Theme
 landing: Visual design
 layout: landing.njk
-permalink: "visual-design/color/index.html"
+permalink: "visual-design/color/"
 ---
 
 <div class="container p-t-md">
