created side navigation  sample site #855

--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -147,7 +147,8 @@ permalink: "/components/side-navigation.html"
        {% include "../../src/_includes/modules/side-navigation-level3.html" %}
       </div>
      </div>
-
+     <a href="/components/side-navigation-sample.html" class="btn btn-default btn-sm">Live website example <span
+       class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
 
 
     </div>
@@ -418,6 +419,9 @@ permalink: "/components/side-navigation.html"
   </ul>
  </div>
 </div>
+
+<a href="/components/side-navigation-sample.html" class="btn btn-default btn-sm">Live website example <span
+  class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
 <hr>
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
