Updated side navigation pages #855

--- a/pages/sample/side-navigation-sample-level6.html
+++ b/pages/sample/side-navigation-sample-level6.html
@@ -7,7 +7,7 @@ permalink: "/components/side-navigation-sample-level6.html"
 
 <nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
-  <li><a href="/" title="Home page">Home</a></li>
+  <li><a href="/components/side-navigation-sample.html" title="Home page">Home</a></li>
   <li><a href="/components/side-navigation-sample.html" title="Type of parties landing page">Type of parties</a></li>
   <li><a href="/components/side-navigation-sample-level2.html" title="Birthday party landing page">Birthday party</a>
   </li>
@@ -28,8 +28,8 @@ permalink: "/components/side-navigation-sample-level6.html"
     <li><a href="/components/side-navigation-sample-level5.html" class="landing back">Dessert</a></li>
 
     <li><a href="/components/side-navigation-sample-level6.html" class="active">Birthday cake</a></li>
-    <li><a href="javascript:;" class="gray-200">Ice cream</a></li>
-    <li><a href="javascript:;" class="gray-200">Other treats</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Ice cream</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Other treats</a></li>
 
    </ul>
   </nav>
