--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -7,7 +7,7 @@ permalink: "/components/side-navigation-sample.html"
 
 <nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
-  <li><a href="/" title="Home page">Home</a></li>
+  <li><a href="/components/side-navigation-sample.html" title="Home page">Home</a></li>
   <li class="active">Type of parties</li>
  </ol>
 </nav>
@@ -18,10 +18,10 @@ permalink: "/components/side-navigation-sample.html"
    <ul class="list-navigation">
     <li><a href="javascript:;" class="landing active">Types of parties</a></li>
     <li><a href="/components/side-navigation-sample-level2.html">Birthday</a></li>
-    <li><a href="javascript:;" class="gray-200">Dance party</a></li>
-    <li><a href="javascript:;" class="gray-200">Holiday party</a></li>
-    <li><a href="javascript:;" class="gray-200">New year's eve</a></li>
-    <li><a href="javascript:;" class="gray-200">Office party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Dance party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Holiday party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">New year's eve</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Office party</a></li>
    </ul>
   </nav>
  </div>
@@ -47,20 +47,21 @@ permalink: "/components/side-navigation-sample.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Dance party">
+     title="Dance party" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Dance party</h3>
-      <p class="font-size-16 gray-200">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
+      <p class="font-size-16 gray-200" aria-hidden="true">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
      </div>
     </a>
    </div>
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party">
+     title="Holiday party" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Holiday party</h3>
-      <p class="font-size-16  gray-200">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum ante ex.</p>
+      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+       ante ex.</p>
      </div>
     </a>
    </div>
@@ -71,20 +72,22 @@ permalink: "/components/side-navigation-sample.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve">
+     title="New year’s eve" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">New year’s eve</h3>
-      <p class="font-size-16 gray-200">Cras lobortis ultricies molestie. Mauris iaculis eros erat, sit ame.</p>
+      <p class="font-size-16 gray-200" aria-hidden="true">Cras lobortis ultricies molestie. Mauris iaculis eros erat,
+       sit ame.</p>
      </div>
     </a>
    </div>
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Office party">
+     title="Office party" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Office party</h3>
-      <p class="font-size-16  gray-200">Mauris sit amet tristique odio. In a ultrices purus, eget.</p>
+      <p class="font-size-16  gray-200" aria-hidden="true">Mauris sit amet tristique odio. In a ultrices purus, eget.
+      </p>
      </div>
     </a>
    </div>
