--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -7,7 +7,7 @@ permalink: "/components/side-navigation-sample-level5.html"
 
 <nav aria-label="Breadcrumb">
  <ol class="breadcrumb">
-  <li><a href="/" title="Home page">Home</a></li>
+  <li><a href="/components/side-navigation-sample.html" title="Home page">Home</a></li>
   <li><a href="/components/side-navigation-sample.html" title="Type of parties landing page">Type of parties</a></li>
   <li><a href="/components/side-navigation-sample-level2.html" title="Birthday party landing page">Birthday party</a>
   </li>
@@ -24,17 +24,17 @@ permalink: "/components/side-navigation-sample-level5.html"
   <nav aria-label="list navigation">
    <ul class="list-navigation">
     <li><a href="/components/side-navigation-sample-level4.html" class="landing back">Food and drinks</a></li>
-    <li><a href="javascript:;" class="gray-200">Appetizers</a></li>
-    <li><a href="javascript:;" class="gray-200">Main course</a></li>
-    <li><a href="javascript:;" class="gray-200">Side dishes</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Appetizers</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Main course</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Side dishes</a></li>
     <li><a href="/components/side-navigation-sample-level5.html" class="active">Dessert</a>
      <ul>
       <li><a href="/components/side-navigation-sample-level6.html">Birthday cake</a></li>
-      <li><a href="javascript:;" class="gray-200">Ice cream</a></li>
-      <li><a href="javascript:;" class="gray-200">Other treats</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Ice cream</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Other treats</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200">Drinks</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Drinks</a></li>
    </ul>
   </nav>
  </div>
@@ -50,7 +50,7 @@ permalink: "/components/side-navigation-sample-level5.html"
    <div class="col-lg-4">
     <a href="/components/side-navigation-sample-level6.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Planning">
+     title="Planning" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Birthday cake</h3>
       <p class="font-size-16 color-black">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
@@ -60,20 +60,22 @@ permalink: "/components/side-navigation-sample-level5.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Guest list">
+     title="Guest list" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Ice cream</h3>
-      <p class="font-size-16 gray-200">Curabitur vitae lacus neque. Curabitur faucibus venenatis libero ut.</p>
+      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+       libero ut.</p>
      </div>
     </a>
    </div>
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party">
+     title="Holiday party" aria-hidden="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Other treats</h3>
-      <p class="font-size-16  gray-200">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum ante ex.</p>
+      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+       ante ex.</p>
      </div>
     </a>
    </div>
