--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -100,6 +100,18 @@ permalink: "/components/side-navigation.html"
 
 
 <h2>Multi-level list</h2>
+<p>You can review a working example of this on our website. The Get started section goes 3 levels deep.</p>
+<ol>
+ <li>Go to <a href="/get-started.html">Get started</a>. </li>
+ <li>From the side navigation, select CSS classes shortcuts. </li>
+ <li>Then select Utility CSS classes.</li>
+</ol>
+
+<p class="m-b-lg">For an example that has 6 levels, review our <a href="/components/side-navigation-sample.html"
+  target="_blank">Side
+  Navigation sample site</a>.</p>
+
+
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -147,8 +159,7 @@ permalink: "/components/side-navigation.html"
        {% include "../../src/_includes/modules/side-navigation-level3.html" %}
       </div>
      </div>
-     <a href="/components/side-navigation-sample.html" class="btn btn-default btn-sm">Live website example <span
-       class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
+
 
 
     </div>
@@ -307,8 +318,8 @@ permalink: "/components/side-navigation.html"
 <h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
-<p>The side navigation component helps visitors find pages within a website. It complements site navigation. It helps
- visitors scan and choose the content they need.</p>
+<p>The side navigation component can help visitors navigate through lots of content. It complements site navigation
+ (doesn’t replace it).</p>
 <p>Use this component when:</p>
 
 <ul>
@@ -420,8 +431,6 @@ permalink: "/components/side-navigation.html"
  </div>
 </div>
 
-<a href="/components/side-navigation-sample.html" class="btn btn-default btn-sm">Live website example <span
-  class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a>
 <hr>
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
