switched from aria-hidden to aria-disabled

--- a/pages/sample/side-navigation-sample-level2.html
+++ b/pages/sample/side-navigation-sample-level2.html
@@ -20,16 +20,16 @@ permalink: "/components/side-navigation-sample-level2.html"
     <li><a href="/components/side-navigation-sample.html" class="landing back">Types of parties</a></li>
     <li><a href="/components/side-navigation-sample-level2.html" class="active">Birthday</a>
      <ul>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Picking a theme</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Picking a theme</a></li>
       <li><a href="/components/side-navigation-sample-level3.html">Planning</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Day of the party</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">After the party</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Day of the party</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">After the party</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Dance party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Holiday party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">New year's eve</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Office party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Dance party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Holiday party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">New year's eve</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Office party</a></li>
    </ul>
   </nav>
  </div>
@@ -45,10 +45,10 @@ permalink: "/components/side-navigation-sample-level2.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Picking a Theme" aria-hidden="true">
+     title="Picking a Theme" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Picking a Theme</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -66,10 +66,10 @@ permalink: "/components/side-navigation-sample-level2.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-hidden="true">
+     title="Holiday party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Day of the Party </h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
        ante ex.</p>
      </div>
     </a>
@@ -81,10 +81,10 @@ permalink: "/components/side-navigation-sample-level2.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-hidden="true">
+     title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">After the party</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
      </div>
     </a>
    </div>
