--- a/pages/sample/side-navigation-sample-level6.html
+++ b/pages/sample/side-navigation-sample-level6.html
@@ -28,8 +28,8 @@ permalink: "/components/side-navigation-sample-level6.html"
     <li><a href="/components/side-navigation-sample-level5.html" class="landing back">Dessert</a></li>
 
     <li><a href="/components/side-navigation-sample-level6.html" class="active">Birthday cake</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Ice cream</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Other treats</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Ice cream</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Other treats</a></li>
 
    </ul>
   </nav>
