--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -18,10 +18,10 @@ permalink: "/components/side-navigation-sample.html"
    <ul class="list-navigation">
     <li><a href="javascript:;" class="landing active">Types of parties</a></li>
     <li><a href="/components/side-navigation-sample-level2.html">Birthday</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Dance party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Holiday party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">New year's eve</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Office party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Dance party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Holiday party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">New year's eve</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Office party</a></li>
    </ul>
   </nav>
  </div>
@@ -47,20 +47,20 @@ permalink: "/components/side-navigation-sample.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Dance party" aria-hidden="true">
+     title="Dance party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Dance party</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
      </div>
     </a>
    </div>
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-hidden="true">
+     title="Holiday party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Holiday party</h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
        ante ex.</p>
      </div>
     </a>
@@ -72,10 +72,10 @@ permalink: "/components/side-navigation-sample.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-hidden="true">
+     title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">New year’s eve</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Cras lobortis ultricies molestie. Mauris iaculis eros erat,
+      <p class="font-size-16 gray-200" aria-disabled="true">Cras lobortis ultricies molestie. Mauris iaculis eros erat,
        sit ame.</p>
      </div>
     </a>
@@ -83,10 +83,10 @@ permalink: "/components/side-navigation-sample.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Office party" aria-hidden="true">
+     title="Office party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Office party</h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Mauris sit amet tristique odio. In a ultrices purus, eget.
+      <p class="font-size-16  gray-200" aria-disabled="true">Mauris sit amet tristique odio. In a ultrices purus, eget.
       </p>
      </div>
     </a>
