--- a/pages/sample/side-navigation-sample-level3.html
+++ b/pages/sample/side-navigation-sample-level3.html
@@ -20,21 +20,21 @@ permalink: "/components/side-navigation-sample-level3.html"
   <nav aria-label="list navigation">
    <ul class="list-navigation">
     <li><a href="/components/side-navigation-sample-level2.html" class="landing back">Birthday</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Picking a theme</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Picking a theme</a></li>
     <li><a href="/components/side-navigation-sample-level3.html" class="active">Planning</a>
      <ul>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Budget</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Guest list</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Invitations</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Decor</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Budget</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Guest list</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Invitations</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Decor</a></li>
       <li><a href="/components/side-navigation-sample-level4.html">Food and drinks</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Surprise? </a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Activities</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Gifts</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Surprise? </a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Activities</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Gifts</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Day of the party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">After the party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Day of the party</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">After the party</a></li>
    </ul>
   </nav>
  </div>
@@ -50,10 +50,10 @@ permalink: "/components/side-navigation-sample-level3.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Budget" aria-hidden="true">
+     title="Budget" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Budget</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -61,10 +61,10 @@ permalink: "/components/side-navigation-sample-level3.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Guest list" aria-hidden="true">
+     title="Guest list" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Guest list</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -72,10 +72,10 @@ permalink: "/components/side-navigation-sample-level3.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-hidden="true">
+     title="Holiday party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Invitations</h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
        ante ex.</p>
      </div>
     </a>
@@ -87,10 +87,10 @@ permalink: "/components/side-navigation-sample-level3.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-hidden="true">
+     title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Decor</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
      </div>
     </a>
    </div>
@@ -107,10 +107,10 @@ permalink: "/components/side-navigation-sample-level3.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-hidden="true">
+     title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Surprise? </h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
      </div>
     </a>
    </div>
