--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -22,22 +22,22 @@ permalink: "/components/side-navigation-sample-level4.html"
   <nav aria-label="list navigation">
    <ul class="list-navigation">
     <li><a href="/components/side-navigation-sample-level3.html" class="landing back">Planning</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Budget</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Guest list</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Invitations</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Decor</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Budget</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Guest list</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Invitations</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Decor</a></li>
     <li><a href="/components/side-navigation-sample-level4.html" class="active">Food and drinks</a>
      <ul>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Appetizers</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Main course</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Side dishes</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Appetizers</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Main course</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Side dishes</a></li>
       <li><a href="/components/side-navigation-sample-level5.html">Dessert</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Drinks</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Drinks</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Surprise?</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Activities</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Gifts</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Surprise?</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Activities</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Gifts</a></li>
    </ul>
   </nav>
  </div>
@@ -53,10 +53,10 @@ permalink: "/components/side-navigation-sample-level4.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Budget" aria-hidden="true">
+     title="Budget" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Appetizers</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -64,10 +64,10 @@ permalink: "/components/side-navigation-sample-level4.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Guest list" aria-hidden="true">
+     title="Guest list" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Main course</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -75,10 +75,10 @@ permalink: "/components/side-navigation-sample-level4.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-hidden="true">
+     title="Holiday party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Side dishes</h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
        ante ex.</p>
      </div>
     </a>
@@ -99,10 +99,10 @@ permalink: "/components/side-navigation-sample-level4.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-hidden="true">
+     title="New year’s eve" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Drinks</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Displays relevant information in a grid-like formation.</p>
+      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
      </div>
     </a>
    </div>
