--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -24,17 +24,17 @@ permalink: "/components/side-navigation-sample-level5.html"
   <nav aria-label="list navigation">
    <ul class="list-navigation">
     <li><a href="/components/side-navigation-sample-level4.html" class="landing back">Food and drinks</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Appetizers</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Main course</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Side dishes</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Appetizers</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Main course</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Side dishes</a></li>
     <li><a href="/components/side-navigation-sample-level5.html" class="active">Dessert</a>
      <ul>
       <li><a href="/components/side-navigation-sample-level6.html">Birthday cake</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Ice cream</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-hidden="true">Other treats</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Ice cream</a></li>
+      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Other treats</a></li>
      </ul>
     </li>
-    <li><a href="javascript:;" class="gray-200" aria-hidden="true">Drinks</a></li>
+    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Drinks</a></li>
    </ul>
   </nav>
  </div>
@@ -50,7 +50,7 @@ permalink: "/components/side-navigation-sample-level5.html"
    <div class="col-lg-4">
     <a href="/components/side-navigation-sample-level6.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Planning" aria-hidden="true">
+     title="Planning" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Birthday cake</h3>
       <p class="font-size-16 color-black">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
@@ -60,10 +60,10 @@ permalink: "/components/side-navigation-sample-level5.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Guest list" aria-hidden="true">
+     title="Guest list" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Ice cream</h3>
-      <p class="font-size-16 gray-200" aria-hidden="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
+      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
        libero ut.</p>
      </div>
     </a>
@@ -71,10 +71,10 @@ permalink: "/components/side-navigation-sample-level5.html"
    <div class="col-lg-4">
     <a href="javascript:;"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-hidden="true">
+     title="Holiday party" aria-disabled="true">
      <div class="p-a">
       <h3 class="h5 m-t-0">Other treats</h3>
-      <p class="font-size-16  gray-200" aria-hidden="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
+      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
        ante ex.</p>
      </div>
     </a>
