--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -49,6 +49,10 @@ permalink: "patterns/progress-tracker.html"
   </div>
   <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
    <div class="p-a-sm p-y-md">
+    <h3 class="h4 m-t-0">Default</h3>
+    {% include "../../src/_includes/modules/progress-block.html" %}
+
+    <h3 class="h4">Bold</h3>
     {% include "../../src/_includes/modules/progress-block-bold.html" %}
    </div>
   </div>
@@ -63,6 +67,10 @@ permalink: "patterns/progress-tracker.html"
   </div>
   <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
    <div class="p-a-sm">
+    <h3 class="h4 m-t-0">Default</h3>
+    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block.html" %}</code></pre>
+
+    <h3 class="h4">Bold</h3>
     <pre
      style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block-bold.html" %}</code></pre>
    </div>
