updated implementation staps page #1176

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -20,7 +20,7 @@ permalink: "download-and-setup.html"
     <li>
      <a href="/download-and-setup.html" class="active">Download and setup</a>
      <ul>
-      <li><a href="/get-started/implementation-roadmap.html">Implementation roadmap</a></li>
+      <li><a href="/get-started/implementation-steps.html">Implementation steps</a></li>
       <li><a href="/get-started/eleventy.html">Eleventy</a></li>
      </ul>
     </li>
@@ -104,11 +104,11 @@ permalink: "download-and-setup.html"
 
   <div class="row">
    <div class="col-md-6 m-t-md">
-    <a href="/get-started/implementation-roadmap.html"
+    <a href="/get-started/implementation-steps.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Implementation roadmap">
+     title="Implementation steps">
      <div class="p-a">
-      <h3 class="h5 m-t-0">Implementation roadmap</h3>
+      <h3 class="h5 m-t-0">Implementation steps</h3>
       <p class="font-size-16 color-black">High-level steps to take when you upgrade to the latest template.</p>
      </div>
     </a>
