--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -14,7 +14,7 @@ permalink: "/get-started/eleventy.html"
      <a href="/download-and-setup.html" class="landing back">Download and setup</a>
     </li>
     <li>
-     <a href="/get-started/implementation-roadmap.html">Implementation roadmap</a>
+     <a href="/get-started/implementation-steps.html">Implementation steps</a>
     </li>
     <li>
      <a href="/get-started/eleventy.html" class="active">Eleventy</a>
