--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -24,7 +24,7 @@ permalink: "sitemap.html"
      <li class="m-t-sm">
       <a href="/download-and-setup.html">Download and setup</a>
       <ul>
-       <li class="m-t-sm"><a href="/get-started/implementation-roadmap.html">Implementation roadmap</a></li>
+       <li class="m-t-sm"><a href="/get-started/implementation-steps.html">Implementation steps</a></li>
        <li class="m-t-sm"><a href="/get-started/eleventy.html">Eleventy</a></li>
       </ul>
      </li>
